# birthday-mail-sender

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  readme.md
.github/workflows/: docker-publish.yml
assets/static/: script.js  style.css
assets/templates/: birthday_schedule.html  dsgvo.html  home.html  import.html  import_mapping.html  layout.html  nav.html  people.html  person_form.html  person_show.html  settings.html  template.html
migrations/: 20260331110000_people.sql  20260331143000_sent.sql  20260414120000_blocked.sql
src/: birthday_scheduler.rs  dsgvo.rs  error.rs  import_people.rs  mail_template.rs  main.rs  people.rs  placeholders.rs  send_mail.rs  settings.rs  template_mailer.rs
