[package]
name = "birthday-mail-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie", "form"] }
base64 = "0.22.1"
calamine = { version = "0.34.0", features = ["chrono"] }
chrono = { version = "0.4.42", features = ["clock"] }
lettre = { version = "0.11.19", features = ["builder", "pool", "ring", "smtp-transport", "tokio1-rustls", "webpki-roots"], default-features = false }
mime = "0.3.17"
minijinja = "2.14.0"
minijinja-embed = "2.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[build-dependencies]
minijinja-embed = "2.14.0"
